--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -217,7 +217,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_LONG_RUNNING_TESTS:-false}
+    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_LONG_RUNNING_TESTS:-true}
 
   - label: ":centos: CentOS 7.6 - Long-Running Tests"
     command:
@@ -229,7 +229,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_CENTOS_7}${SKIP_LONG_RUNNING_TESTS:-false}
+    skip: ${SKIP_CENTOS_7}${SKIP_LONG_RUNNING_TESTS:-true}
 
   - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
     command:
@@ -241,7 +241,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_16}${SKIP_LONG_RUNNING_TESTS:-false}
+    skip: ${SKIP_UBUNTU_16}${SKIP_LONG_RUNNING_TESTS:-true}
 
   - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
     command:
@@ -253,7 +253,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_LONG_RUNNING_TESTS:-false}
+    skip: ${SKIP_UBUNTU_18}${SKIP_LONG_RUNNING_TESTS:-true}
 
   - label: ":darwin: macOS 10.14 - Long-Running Tests"
     command:
@@ -272,7 +272,7 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-node-fleet"
-    skip: ${SKIP_MOJAVE}${SKIP_LONG_RUNNING_TESTS:-false}
+    skip: ${SKIP_MOJAVE}${SKIP_LONG_RUNNING_TESTS:-true}
 
   - wait:
     continue_on_failure: true
