--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,77 +1,53 @@
 steps:
   - wait
 
+  - label: ":aws: Amazon_Linux 2 - Build"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "amazon_linux-2"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_AMAZON_LINUX_2
+
   - label: ":centos: CentOS 7.6 - Build"
     command:
       - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env: 
-      IMAGE_TAG: "centos-7.6-pinned"
+      IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
     skip: $SKIP_CENTOS_7
 
-  # - label: ":ubuntu: Ubuntu 18.04 - Build"
-  #   command:
-  #     - "./.cicd/build.sh"
-  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-  #   env:
-  #     IMAGE_TAG: "ubuntu-18.04-pinned"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_18
+  - label: ":ubuntu: Ubuntu 16.04 - Build"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
 
-#   - label: ":aws: Amazon_Linux 2 - Build"
-#     command:
-#       - "./.cicd/build.sh"
-#       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-#     env:
-#       IMAGE_TAG: "amazon_linux-2"
-#       BUILDKITE_AGENT_ACCESS_TOKEN:
-#     agents:
-#       queue: "automation-eos-builder-fleet"
-#     timeout: ${TIMEOUT:-10}
-#     skip: $SKIP_AMAZON_LINUX_2
-
-#   - label: ":centos: CentOS 7.6 - Build"
-#     command:
-#       - "./.cicd/build.sh"
-#       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-#     env: 
-#       IMAGE_TAG: "centos-7.6"
-#       BUILDKITE_AGENT_ACCESS_TOKEN:
-#     agents:
-#       queue: "automation-eos-builder-fleet"
-#     timeout: ${TIMEOUT:-10}
-#     skip: $SKIP_CENTOS_7
-
-#   - label: ":ubuntu: Ubuntu 16.04 - Build"
-#     command:
-#       - "./.cicd/build.sh"
-#       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-#     env: 
-#       IMAGE_TAG: "ubuntu-16.04"
-#       BUILDKITE_AGENT_ACCESS_TOKEN:
-#     agents:
-#       queue: "automation-eos-builder-fleet"
-#     timeout: ${TIMEOUT:-10}
-#     skip: $SKIP_UBUNTU_16
-
-#   - label: ":ubuntu: Ubuntu 18.04 - Build"
-#     command:
-#       - "./.cicd/build.sh"
-#       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-#     env:
-#       IMAGE_TAG: "ubuntu-18.04"
-#       BUILDKITE_AGENT_ACCESS_TOKEN:
-#     agents:
-#       queue: "automation-eos-builder-fleet"
-#     timeout: ${TIMEOUT:-10}
-#     skip: $SKIP_UBUNTU_18
+  - label: ":ubuntu: Ubuntu 18.04 - Build"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
 
 #   - label: ":darwin: macOS 10.14 - Build"
 #     command:
@@ -93,6 +69,42 @@ steps:
 #     agents:
 #       - "queue=mac-anka-large-node-fleet"
 #     skip: $SKIP_MOJAVE
+
+  - label: ":aws: Amazon_Linux 2 - Build Unpinned"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "amazon_linux-2-unpinned"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_AMAZON_LINUX_2
+
+  - label: ":centos: CentOS 7.6 - Build Unpinned"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env: 
+      IMAGE_TAG: "centos-7.6-unpinned"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
+
+  - label: ":ubuntu: Ubuntu 18.04 - Build Unpinned"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "ubuntu-18.04-unpinned"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
 
 #   - wait
 
