--- a/.cicd/unpinned.yml
+++ b/.cicd/unpinned.yml
@@ -6,24 +6,24 @@ steps:
       - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
-      IMAGE_TAG: "amazon_linux-2"
+      IMAGE_TAG: "amazon_linux-2-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_AMAZON_LINUX_2
+    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_UNPINNED_BUILDS:-true}
 
   - label: ":centos: CentOS 7.6 - Build"
     command:
       - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env: 
-      IMAGE_TAG: "centos-7.6"
+      IMAGE_TAG: "centos-7.6-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_CENTOS_7
+    skip: ${SKIP_CENTOS_7}${SKIP_UNPINNED_BUILDS:-true}
 
   - label: ":ubuntu: Ubuntu 16.04 - Build"
     command:
@@ -42,12 +42,12 @@ steps:
       - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
-      IMAGE_TAG: "ubuntu-18.04"
+      IMAGE_TAG: "ubuntu-18.04-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+    skip: ${SKIP_UBUNTU_18}${SKIP_UNPINNED_BUILDS:-true}
 
   - label: ":darwin: macOS 10.14 - Build"
     command:
@@ -55,8 +55,6 @@ steps:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && ./.cicd/build.sh"
       - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      PINNED: "true"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -70,8 +68,8 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-large-node-fleet"
-    skip: ${SKIP_MOJAVE}
-    
+    skip: ${SKIP_MOJAVE}${SKIP_UNPINNED_BUILDS:-true}
+
   - wait
 
   - label: ":aws: Amazon_Linux 2 - Unit Tests"
@@ -79,7 +77,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/parallel-tests.sh"
     env:
-      IMAGE_TAG: "amazon_linux-2"
+      IMAGE_TAG: "amazon_linux-2-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -91,7 +89,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/parallel-tests.sh"
     env: 
-      IMAGE_TAG: "centos-7.6"
+      IMAGE_TAG: "centos-7.6-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -115,7 +113,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/parallel-tests.sh"
     env:
-      IMAGE_TAG: "ubuntu-18.04"
+      IMAGE_TAG: "ubuntu-18.04-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -153,7 +151,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/long-running-tests.sh"
     env:
-      IMAGE_TAG: "amazon_linux-2"
+      IMAGE_TAG: "amazon_linux-2-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -165,7 +163,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/long-running-tests.sh"
     env: 
-      IMAGE_TAG: "centos-7.6"
+      IMAGE_TAG: "centos-7.6-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -189,7 +187,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/long-running-tests.sh"
     env:
-      IMAGE_TAG: "ubuntu-18.04"
+      IMAGE_TAG: "ubuntu-18.04-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -230,75 +228,3 @@ steps:
       queue: "automation-eos-builder-fleet"
     timeout: 10
     soft_fail: true
-
-  - wait
-
-  - label: ":ubuntu: Ubuntu 18.04 - Contract Builder"
-    command:
-      - "./.cicd/installation-build.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_CONTRACT_BUILDER}
-
-  - label: ":centos: CentOS 7.6 - Package Builder"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-      - "./.cicd/package-builder.sh"
-    env:
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_CENTOS_7}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-      - "./.cicd/package-builder.sh"
-    env:
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_16}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-      - "./.cicd/package-builder.sh"
-    env:
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":darwin: Mojave - Package Builder"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/package-builder.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-node-fleet"
-    timeout: 10
-    skip: ${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":git: Git Submodule Regression Check"
-    command:
-      - "./.cicd/submodule-regression-checker.sh"
-    agents:
-      queue: "automation-basic-builder-fleet"
-    timeout: 5
