--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -51,8 +51,8 @@ steps:
 
   - label: ":darwin: macOS 10.14 - Build"
     command:
-      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+      - "cd eos && ./.cicd/anka/macos-10.14.sh"
       - "cd eos && ./.cicd/build.sh"
       - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
