--- a/.cicd/unpinned.yml
+++ b/.cicd/unpinned.yml
@@ -11,7 +11,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_UNPINNED_BUILDS:-true}
+    skip: ${SKIP_AMAZON_LINUX_2}
 
   - label: ":centos: CentOS 7.6 - Build"
     command:
@@ -23,7 +23,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_CENTOS_7}${SKIP_UNPINNED_BUILDS:-true}
+    skip: ${SKIP_CENTOS_7}
 
   - label: ":ubuntu: Ubuntu 16.04 - Build"
     command:
@@ -47,7 +47,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_UNPINNED_BUILDS:-true}
+    skip: ${SKIP_UBUNTU_18}
 
   - label: ":darwin: macOS 10.14 - Build"
     command:
@@ -68,7 +68,7 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-large-node-fleet"
-    skip: ${SKIP_MOJAVE}${SKIP_UNPINNED_BUILDS:-true}
+    skip: ${SKIP_MOJAVE}
 
   - wait
 
