--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -77,7 +77,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-test.sh"
     env:
       IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -89,7 +89,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-test.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -101,7 +101,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-test.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -113,7 +113,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-test.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -127,7 +127,7 @@ steps:
       - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb libusb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/parallel-tests.sh"
+      - "cd eos && ./.cicd/parallel-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -151,7 +151,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-test.sh"
     env:
       IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -163,7 +163,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-test.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -175,7 +175,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-test.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -187,7 +187,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-test.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -201,7 +201,7 @@ steps:
       - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb libusb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/long-running-tests.sh"
+      - "cd eos && ./.cicd/long-running-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -307,7 +307,7 @@ steps:
 
   - label: ":git: Git Submodule Regression Check"
     command:
-      - "./.cicd/submodule-regression-checker.sh"
+      - "./.cicd/submodule-regression-check.sh"
     agents:
       queue: "automation-basic-builder-fleet"
     timeout: 5
