--- a/.cicd/unpinned.yml
+++ b/.cicd/unpinned.yml
@@ -75,7 +75,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-test.sh"
+      - "./.cicd/test.sh scripts/parallel-test.sh"
     env:
       IMAGE_TAG: "amazon_linux-2-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -87,7 +87,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-test.sh"
+      - "./.cicd/test.sh scripts/parallel-test.sh"
     env: 
       IMAGE_TAG: "centos-7.6-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -99,7 +99,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-test.sh"
+      - "./.cicd/test.sh scripts/parallel-test.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -111,7 +111,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-test.sh"
+      - "./.cicd/test.sh scripts/parallel-test.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -125,7 +125,7 @@ steps:
       - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb libusb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/parallel-test.sh"
+      - "cd eos && ./.cicd/test.sh scripts/parallel-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -149,7 +149,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-test.sh"
+      - "./.cicd/test.sh scripts/long-running-test.sh"
     env:
       IMAGE_TAG: "amazon_linux-2-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -161,7 +161,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-test.sh"
+      - "./.cicd/test.sh scripts/long-running-test.sh"
     env: 
       IMAGE_TAG: "centos-7.6-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -173,7 +173,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-test.sh"
+      - "./.cicd/test.sh scripts/long-running-test.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -185,7 +185,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-test.sh"
+      - "./.cicd/test.sh scripts/long-running-test.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04-unpinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -199,7 +199,7 @@ steps:
       - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb libusb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/long-running-test.sh"
+      - "cd eos && ./.cicd/test.sh scripts/long-running-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
