--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,6 +1,9 @@
 steps:
   - wait
 
+  - wait
+
+
   - label: ":pipeline: Generate Pipeline Steps"  
     command: "./.cicd/generate-pipeline.sh | buildkite-agent pipeline upload"
     agents:
