--- a/unittests/contracts.hpp.in
+++ b/unittests/contracts.hpp.in
@@ -50,6 +50,7 @@ namespace eosio {
          MAKE_READ_WASM_ABI(test_api_db,           test_api_db,           test-contracts)
          MAKE_READ_WASM_ABI(test_api_multi_index,  test_api_multi_index,  test-contracts)
          MAKE_READ_WASM_ABI(test_ram_limit,        test_ram_limit,        test-contracts)
+         MAKE_READ_WASM_ABI(code_version_test,     code_version_test,     test-contracts)
       };
    } /// eosio::testing
 }  /// eosio
